--- a/App/flights_app.vcxproj.filters
+++ b/App/flights_app.vcxproj.filters
@@ -21,10 +21,8 @@
     <ClCompile Include="flights_app.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Classes\CreateUser.h">
+    <ClCompile Include="..\Classes\CreateUser.cpp">
       <Filter>Classes</Filter>
-    </ClInclude>
+    </ClCompile>
   </ItemGroup>
 </Project>
