--- a/App/flights_app.vcxproj
+++ b/App/flights_app.vcxproj
@@ -139,8 +139,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\Classes\CreateUser.cpp" />
+    <ClCompile Include="Classes\AddFlight.cpp" />
+    <ClCompile Include="Classes\CreateUser.cpp" />
+    <ClCompile Include="Classes\DeleteFlight.cpp" />
+    <ClCompile Include="Classes\Login.cpp" />
+    <ClCompile Include="Classes\SearchFlight.cpp" />
     <ClCompile Include="flights_app.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Classes\AddFlight.h" />
+    <ClInclude Include="Classes\CreateUser.h" />
+    <ClInclude Include="Classes\DeleteFlight.h" />
+    <ClInclude Include="Classes\Login.h" />
+    <ClInclude Include="Classes\SearchFlight.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
